<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout_score_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                android:splitMotionEvents="false">

                <TextView
                    android:id="@+id/textView_score_table_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentEnd="false"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/score_table_label" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_table_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recyclerView_row_header"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="0dp"
                    android:layout_toEndOf="@+id/recyclerView_column_header" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_row_header"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:orientation="horizontal" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_column_header"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="50dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/some_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView_statistics_table_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="false"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="17dp"
                    android:text="@string/statistics_table_label" />

                <com.evrencoskun.tableview.TableView
                    android:id="@+id/tableView_statistic_table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spinner_sort"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="false"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="8dp">

                </com.evrencoskun.tableview.TableView>

                <Spinner
                    android:id="@+id/spinner_sort"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_statistics_table_label"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/textView_sort_by_label" />

                <TextView
                    android:id="@+id/textView_sort_by_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_statistics_table_label"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/sort_by_label" />

            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        layout="@layout/view_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />



</RelativeLayout>